traq/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traq-frontend
  name: traq-frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-frontend
  template:
    metadata:
      labels:
        app: traq-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org
      containers:
        - image: ghcr.io/traptitech/traq-ui:3.33.10
          name: traq-frontend
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "40m"
              memory: "256Mi"
          volumeMounts:
            - name: config-js
              mountPath: /app/override
      volumes:
        - configMap:
            name: traq-frontend-config
          name: config-json
        - emptyDir: {}
          name: config-js
      restartPolicy: Always
