traq/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traq-frontend
  name: traq-frontend
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    app: traq-frontend
